# magus

./: .cursorrules  .gitignore  API_TESTING_COMMANDS.txt  BRANCHING.md  Dockerfile  PLAN.md  README.md  SPRINTS.md  VERSION  docker-compose.prod.yml  docker-compose.yml  env.example  env.template  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml  security.yml
frontend/: .eslintrc.json  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: analytics.ts  auth.ts  axios.ts  taskTypes.ts  tasks.ts
frontend/src/components/: APIKeySettings.tsx  CurrentTaskCard.tsx  ExportSettings.tsx  ProtectedRoute.tsx  QuickStartGrid.tsx  TaskHistory.tsx  ThemeToggle.tsx  TodaysSummary.tsx
frontend/src/hooks/: useCurrentTask.ts  useTheme.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  SettingsPage.tsx
krono/: celerybeat-schedule.bak  celerybeat-schedule.dir  magusdb.env  manage.py  nohup.out  pytest.ini
krono/krono/: LoggingMiddleware.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
krono/magus/: __init__.py  admin.py  apps.py  authentication.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
kronoMagus/: manage.py
kronoMagus/kronoMagus/: asgi.py  settings.py  urls.py  wsgi.py
kronoMagus/magus/: apps.py
nginx/: default.conf  nginx.conf
scripts/: generate-secrets.sh  setup.sh  start.sh
(+33 files in other folders)
